--- a/ST-breast/3-10x_breast_immune_reference.Rmd
+++ b/ST-breast/3-10x_breast_immune_reference.Rmd
@@ -1,44 +1,69 @@
 ---
-title: "3-10x_breast_immune_reference"
 author: "Marc Elosua-Bayes"
-date: "6/12/2020"
-output: html_document
+date: "`r format(Sys.time(), '%d %B, %Y')`"
+output:
+  html_document:
+    toc: yes
+    toc_float: yes
+    number_sections: yes
+    df_print: paged
 editor_options: 
   chunk_output_type: console
+params: 
+    sample_id: "Default!"
+    clust_vr: "Default!"
+title: "`r sprintf('3-10x_breast_immune_reference %s', {params$sample_id})`"
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, out.width = "100%", fig.align='center', 
+                      message = FALSE, warning = FALSE)
+options(width = 1200)
 ```
 
 ## Introduction
 In this R markdown document we will map immune cells onto the breast cancer tissue. 
 
-
 ```{r}
 library(Seurat)
-# library(Spaniel)
 library(tidyverse)
 library(Matrix)
 library(SPOTlight)
-source("utils/bin.r")
-source("utils/spatial_plot_spaniel.R")
+source(here::here("utils/bin.r"))
 ```
 
 ## Paths
 ```{r}
-source("misc/paths.R")
-dir.create(path = sprintf("%s/%s", an_breast_10x, robj_dir),
-           showWarnings = FALSE,
-           recursive = TRUE)
+source(here::here("misc/paths.R"))
 
-dir.create(path = sprintf("%s/%s", an_breast_10x, plt_dir),
-           showWarnings = FALSE,
-           recursive = TRUE)
+"{an_breast_10x}/{robj_dir}" %>%
+  glue::glue() %>%
+  here::here() %>%
+  dir.create(
+    path = ,
+    showWarnings = FALSE,
+    recursive = TRUE)
+
+"{an_breast_10x}/{plt_dir}" %>%
+  glue::glue() %>%
+  here::here() %>%
+  dir.create(
+    path = ,
+    showWarnings = FALSE,
+    recursive = TRUE)
 ```
 
 ## Parameters
 ```{r}
+set.seed(1243)
+
+sample_id <- params$sample_id
+# sample_id <- "breast_1"
+# sample_id <- "breast_2"
+clust_vr <- params$clust_vr
+# clust_vr <- "lv1_annot"
+# clust_vr <- "lv2_annot"
+
 trn <- "melanoma"
 cl_n <- 100
 hvg <- 3000
@@ -46,261 +71,218 @@ ntop <- NULL
 transf <- "uv"
 method <- "nsNMF"
 min_cont <- 0
-clust_vr <- "new_cell_types"
 
 if (is.null(ntop)) {
-  spotlight_id <- sprintf("trn-%s_cln-%s_hvg-%s_ntop-NULL_transf-%s_method-%s_mincont-%s",
-                          trn, cl_n, hvg, transf, method, min_cont)
+  spotlight_id <- glue::glue("trn-{trn}_cln-{cl_n}_hvg-{hvg}_ntop-NULL_transf-{transf}_method-{method}_mincont-{min_cont}")
 } else {
-  spotlight_id <- sprintf("trn-%s_cln-%s_hvg-%s_ntop-%s_transf-%s_method-%s_mincont-%s",
-                          trn, cl_n, hvg, ntop, transf, method, min_cont)
+  spotlight_id <- glue::glue("trn-{trn}_cln-{cl_n}_hvg-{hvg}_ntop-{ntop}_transf-{transf}_method-{method}_mincont-{min_cont}")
 }
-
-ct_interest <- c("Plasma B cells", "Regulatory T cells", "T helper cells",
-                 "Proliferative T cells", "Pre-exhausted CD8 T cells", "Cytotoxic CD8 T cells",
-                 "NK", "SPP1 TAMs", "M2 TAMs")
 ```
+
+Define cell types of interest depending on the annotation level
+```{r}
+if (clust_vr == "lv2_annot") {
+  ct_interest <- c("Plasma.B.cells", "T.regs", "T.helper.Th17",
+                   "Proliferation", "CD8.exhausted",
+                   "CD8.cytotoxic", "NK", "Macrophages.SPP1", "TAMs.C1QC")
+} else if (clust_vr == "lv1_annot") {
+  ct_interest <- c("Plasma B cells", "T cells regulatory", "T helper cells",
+                   "Proliferation", "CD8 pre-exhausted",
+                   "CD8 terminally exhausted", "NK", "Macrophages SPP1", "TAMs C1QC")
+}
+```
+
 
 ## Load data
 Breast cancer data loaded here comes from 1-10x_breast_QC.Rmd
 ```{r}
 ### Spatial breast cancer
-breast_merged <- readRDS(file = sprintf("%s/%s/breast_merged_processed.RDS",
-                                        an_breast_10x, robj_dir))
-
-### Immune reference atlas
-if (trn == "full") {
-  ica_se <- readRDS("data/immune_reference/atlas_250_specific_cell_type.rds")
-} else if (trn == "breast") {
-  ica_se <- readRDS("data/immune_reference/atlas_complete_annotation_breast.rds")
-} else if (trn == "melanoma") {
-  ica_se <- readRDS("data/immune_reference/atlas_complete_annotation_melanoma.rds")
-}
-
-# ica_se <- ica_se[, !ica_se$specific_cell_type %in% c("MAST")]
+se_obj <- "{an_breast_10x}/{robj_dir}/qc_se_{sample_id}.rds" %>%
+  glue::glue() %>%
+  here::here() %>%
+  readRDS(file = .)
 ```
 
 Create a name/color dataframe
 ```{r}
-# cell_types <- sort(unique(as.character(ica_se@meta.data[, clust_vr])))
-source("misc/col_df_scrpt.R")
+# source(here::here("misc/col_df_scrpt.R"))
+# source(here::here("misc/col_df_scrpt2.R"))
+
+# col_vec <- readRDS(here::here("data/immune_reference/complete_cell_type_palette.rds"))
+# col_df <- data.frame(col_vec) %>%
+#   tibble::rownames_to_column("plt_name") %>%
+#   dplyr::mutate(ct_name = stringr::str_replace_all(
+#     string = plt_name,
+#     pattern = "[[:punct:]]|[[:blank:]]",
+#     replacement = "."))
+# prloif_df <- data.frame(plt_name = "Proliferation", col_vec = "Brown", ct_name = "Proliferation")
+# col_df <- rbind(col_df, prloif_df)
+# col_df <- col_df %>%
+#   dplyr::mutate(
+#     # plt_name = dplyr::if_else(plt_name == "Th17 cells", "CD4 effector memory", plt_name),
+#     # ct_name = dplyr::if_else(ct_name == "Th17.cells", "CD4.effector.memory", ct_name),
+#     plt_name = dplyr::if_else(plt_name == "TAMs M2", "TAMs C1QC", plt_name)
+#   )
+# saveRDS(object = col_df, file = here::here("misc/col_df.rds"))
+col_df <- readRDS(here::here("misc/col_df.rds"))
+```
+
+Subset ICA to just use cells from the melanoma subset since we have a good representation of cells for each cluster from this dataset.
+```{r eval = FALSE}
+ica_melanoma2_path <- "{an_breast_10x}/{robj_dir}/ica_melanoma2.rds" %>%
+  glue::glue() %>%
+  here::here()
+
+if (file.exists(ica_melanoma2_path)) {
+  
+  ica_sub <- readRDS(file = ica_melanoma2_path)
+} else {
+  # ica_se <- readRDS("/scratch/devel/pnieto/TIL_Atlas/TICA/output/integrated_renamed_filtered.rds")
+  ica_se <- "/scratch/devel/pnieto/TIL_Atlas/atlas_final_dataset/new_annot/TICAtlas.rds" %>%
+    here::here() %>%
+    readRDS(.)
+  ### Immune reference atlas
+  ica_sub <- subset(ica_se, subset = source == "melanoma2")
+  rm(ica_se)
+  
+  saveRDS(object = ica_sub, file = ica_melanoma2_path)
+}
+
+table(ica_sub@meta.data$lv1_annot)
+table(ica_sub@meta.data$lv2_annot)
 ```
 
 Change variable names to remove non-standard characters
-```{r}
-ica_se[["specific_cell_type_mod"]] <- gsub(pattern = "[[:punct:]]|[[:blank:]]", ".",
-                               x = as.character(ica_se@meta.data[, clust_vr]), 
-                               perl = TRUE)
-```
+```{r eval = FALSE}
+ica_sub[["specific_cell_type_mod"]] <- stringr::str_replace_all(
+  string = as.character(ica_sub@meta.data[, clust_vr]),
+  pattern = "[[:punct:]]|[[:blank:]]",
+  replacement = ".")
 
-Select 250 cells per cell type
-```{r eval = FALSE }
-library(dplyr)
-n <- 250
-keep_id <- ica_se@meta.data %>%
-  tibble::rownames_to_column("barcode") %>% 
-  dplyr::group_by(specific_cell_type_mod) %>%
-  dplyr::sample_n(if(n() < n) n() else n) %>% 
-  dplyr::distinct() %>%
-  dplyr::pull("barcode")
+prolif_vec <- c("T.cells.proliferative", "Macrophages.and.monocytes.proliferative",
+                "B.cells.proliferative", "Macrophages.proliferative")
 
-ica_se <- ica_se[, keep_id]
-```
+ica_sub[["specific_cell_type_mod"]] <- 
+  dplyr::if_else(ica_sub@meta.data[, "specific_cell_type_mod"] %in% prolif_vec,
+                 "Proliferation", ica_sub@meta.data[, "specific_cell_type_mod"])
 
-Next we are going to process the seurat object. Since we are working with data from multiple sources and we need to have the data normalized using unit variance we will run SCTransform. We regress the effect of the source while scaling but not centering the data. This way we remove the source batch, perform unit variance scaling and keep it positive by not centering it around 0.
-```{r}
-Seurat::Idents(ica_se) <- ica_se@meta.data[, "specific_cell_type_mod"]
-
-if (trn == "full") {
-  # ica_se <- Seurat::SCTransform(ica_se,
-  #                               # Regress out the effect of the study/protocol
-  #                               vars.to.regress = "source",
-  #                               assay = "RNA",
-  #                               # Scale data to unit variance
-  #                               do.scale = TRUE,
-  #                               # Do NOT center around 0
-  #                               do.center = FALSE)
-  # saveRDS(object = ica_se,
-  #       file = sprintf("%s/%s/ica_se_full_processed.RDS",
-  #                      an_breast_10x, robj_dir))
-  
-  ica_se <- readRDS(file = sprintf("%s/%s/ica_se_full_processed.RDS",
-                       an_breast_10x, robj_dir))
-
-} else if (trn == "breast") {
-  # ica_se <- Seurat::SCTransform(ica_se,
-  #                               assay = "RNA",
-  #                               # Scale data to unit variance
-  #                               do.scale = TRUE,
-  #                               # Do NOT center around 0
-  #                               do.center = FALSE)
-  # saveRDS(object = ica_se,
-  #         file = sprintf("%s/%s/ica_se_breast_processed.RDS",
-  #                        an_breast_10x, robj_dir))
-  # 
-  ica_se <- readRDS(file = sprintf("%s/%s/ica_se_breast_processed.RDS",
-                         an_breast_10x, robj_dir))
-} else if (trn == "melanoma") {
-  # ica_se <- Seurat::SCTransform(ica_se,
-  #                             assay = "RNA",
-  #                             # Scale data to unit variance
-  #                             do.scale = TRUE,
-  #                             # Do NOT center around 0
-  #                             do.center = FALSE,
-  #                             ncells = 5000)
-  # saveRDS(object = ica_se,
-  #         file = "data/immune_reference/ica_se_melanoma_processed.RDS")
-  ica_se <- readRDS(file = "data/immune_reference/ica_se_melanoma_processed.RDS")
-
-}
+table(ica_sub@meta.data$specific_cell_type_mod)
 ```
 
 Immune cell marker genes
 ```{r eval = FALSE}
-# ica_se <- Seurat::SCTransform(object = ica_se, assay = "RNA")
-ica_markers <- Seurat::FindAllMarkers(object = ica_se,
+ica_sub <- Seurat::SCTransform(object = ica_sub, assay = "RNA")
+
+Seurat::Idents(ica_sub) <- as.character(ica_sub@meta.data[, "specific_cell_type_mod"])
+
+ica_markers <- Seurat::FindAllMarkers(object = ica_sub,
                        assay = "SCT",
                        slot = "data",
                        only.pos = TRUE,
                        logfc.threshold = 0,
                        min.pct = 0,
-                       max.cells.per.ident = 250)
+                       max.cells.per.ident = 500)
 
-if (trn == "full") {
-  saveRDS(object = ica_markers,
-        file = "data/immune_reference/ica_markers_all.RDS")
-} else if (trn == "breast") {
-  saveRDS(object = ica_markers,
-        file = "data/immune_reference/ica_markers_breast.RDS")
-} else if (trn == "melanoma") {
-  saveRDS(object = ica_markers,
-        file = "data/immune_reference/ica_markers_melanoma.RDS")
-}
+
+"data/immune_reference/ica_markers_melanoma2_{clust_vr}.rds" %>%
+  glue::glue()%>%
+  here::here( ) %>%
+  saveRDS(
+    object = ica_markers,
+    file = .)
 ```
 
-Check how many unique genes per cluster there are
-```{r}
-# ica_markers <- readRDS(file = "data/immune_reference/ica_markers_all.RDS")
-# ica_markers <- readRDS(file = "data/immune_reference/ica_markers_all_reg-out-source.pdf")
-# ica_markers <- readRDS(file = "data/immune_reference/ica_markers_all_latent.RDS")
-# ica_markers <- readRDS(file = "data/immune_reference/ica_pdac_markers_all.RDS")
-
-if (trn == "full") {
-  ica_markers <- readRDS(file = "data/immune_reference/ica_markers_all.RDS")
-} else if (trn == "breast") {
-  ica_markers <- readRDS(file = "data/immune_reference/ica_markers_breast.RDS")
-} else if (trn == "melanoma") {
-  ica_markers <- readRDS(file = "data/immune_reference/ica_markers_melanoma.RDS")
-}
-
-# ica_markers <- ica_markers %>%
-#   filter(avg_logFC > 0.5 & pct.1 > 0.25)
-
-
-# Select unique markers from each cluster, if there are common markers between clusters lda model gets confused and classifies very different clusters as belonging to the same topic just because the seeding induced it!
-cluster_markers_uniq <- lapply(unique(ica_markers$cluster), function(clust) {
-  ls1 <- ica_markers[ica_markers$cluster == clust, "gene"]
-  ls2 <- ica_markers[ica_markers$cluster != clust, "gene"]
-  ls1_unique <- ls1[! ls1 %in% ls2]
-
-  return(ica_markers[ica_markers$cluster == clust & ica_markers$gene %in% ls1_unique, ])
-}) %>%
-  dplyr::bind_rows()
-
-ica_markers %>% 
-  dplyr::count(cluster) %>% 
-  dplyr::left_join(cluster_markers_uniq %>% dplyr::count(cluster, name = "n_unique"))
-```
-
-Here we want ot check if the gene markers obtained using UV and no scaling are the same as if we use scaling and no UV
+Load marker genes per cluster
 ```{r eval = FALSE}
-ica_markers_uv <- readRDS(file = "data/immune_reference/ica_markers_all.RDS")
+ica_markers <- "data/immune_reference/ica_markers_melanoma2_{clust_vr}.rds" %>%
+  glue::glue()%>%
+  here::here() %>%
+  readRDS(file = .)
 
-markers_uv_ls <- lapply(unique(ica_markers_uv$cluster), function(clust) {
-  ica_markers_uv[ica_markers_uv$cluster == clust, "gene"]
-})
-names(markers_uv_ls) <- unique(ica_markers_uv$cluster)
+# ica_markers <- readRDS(file = here::here("data/immune_reference/ica_markers_melanoma2.rds"))
 
-  
-ica_markers <- readRDS(file = "data/immune_reference/ica_markers_all.RDS")
+# if (clust_vr == "lv1_annot") {
+  # Remove MAST cells
+ica_markers <- ica_markers %>% dplyr::filter(cluster != "Mast.cells")
+# } else if (clust_vr == "lv2_annot") {
+  # Remove MAST cells
+  # ica_markers <- ica_markers %>% dplyr::filter(cluster != "Mast.cells")
 
-markers_ls <- lapply(unique(ica_markers$cluster), function(clust) {
-  ica_markers[ica_markers$cluster == clust, "gene"]
-})
-names(markers_ls) <- unique(ica_markers$cluster)
-
-df <- lapply(names(markers_ls), function(ct) {
-  norm_uv <- sum(markers_ls[[ct]] %in% markers_uv_ls[[ct]])
-  uv_norm <- sum(markers_uv_ls[[ct]] %in% markers_ls[[ct]])
-  total_norm <- length(markers_ls[[ct]])
-  total_uv <- length(markers_uv_ls[[ct]])
-  
-  data.frame(norm_uv, uv_norm, total_norm, total_uv)
-}) %>% bind_rows()
-
+# }
 ```
 
-Lastly we need to compute UV normalization of the spatial data so that it applys correctly for all.
-In this case we are not correcting for any batch since there is none in the spatial data.
-to SPOTlightm since we are passing the argument trasnf = raw, we are going to pass directly the normalized SCT$data matrix.
-```{r}
-breast_merged <- Seurat::SCTransform(breast_merged,
-                              assay = "Spatial",
-                              # Scale data to unit variance
-                              do.scale = TRUE,
-                              # Do NOT center around 0
-                              do.center = FALSE)
+Look at the proliferation markers
+```{r  eval = FALSE}
+ica_markers %>%
+  dplyr::filter(cluster == "Proliferation") %>%
+  head(20)
 ```
 
 ## Deconvolution
-Run deconvolution using the previously uv normalized and source-adjusted SCT-data expression matrix.
-```{r eval = FALSE}
+Run deconvolution.
+```{r message = FALSE,  eval = FALSE}
+# Remove Mast cells
+ica_sub <- subset(ica_sub, subset = specific_cell_type_mod != "Mast.cells")
+# Create Seurat object with filtered gene matrix after removing Mast cells
+ica_sub <- Seurat::CreateSeuratObject(
+  counts = ica_sub@assays$RNA@counts[
+    sparseMatrixStats::rowSums2(ica_sub@assays$RNA@counts) != 0, ],
+  meta.data = ica_sub@meta.data)
+
+# Remove empty spatial genes
+# keep_genes <- rowSums(as.matrix(se_obj@assays$Spatial@counts)) != 0
+# table(rowSums(ica_sub@assays$RNA@counts) != 0)
+
+# Run deconvolution
 decon_mtrx_ls <- SPOTlight::spotlight_deconvolution(
-  se_sc = ica_se,
-  counts_spatial = breast_merged@assays$SCT@data,
+  se_sc = ica_sub,
+  counts_spatial = se_obj@assays$Spatial@counts,
   clust_vr = "specific_cell_type_mod",
   cluster_markers = ica_markers,
   cl_n = cl_n,
   hvg = hvg,
   ntop = ntop,
-  transf = "raw", # Set to raw 
+  transf = transf,
   method = method,
   min_cont = min_cont,
-  assay = "SCT",
-  slot = "data")
+  assay = "RNA",
+  slot = "counts")
 
 # saveRDS(object = decon_mtrx_ls,
-#         file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s_reg.RDS",
+#         file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s_reg.rds",
 #                        an_breast_10x, robj_dir, spotlight_id))
 # 
 # saveRDS(object = decon_mtrx_ls,
-#         file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s_latent.RDS",
+#         file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s_latent.rds",
 #                        an_breast_10x, robj_dir, spotlight_id))
 
-saveRDS(object = decon_mtrx_ls,
-        file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s.RDS",
-                       an_breast_10x, robj_dir, spotlight_id))
+"{an_breast_10x}/{robj_dir}/decon_mtrx_breast_cancer_10x_atlas_{sample_id}_{spotlight_id}_{clust_vr}.rds" %>%
+  glue::glue() %>%
+  here::here() %>%
+  saveRDS(object = decon_mtrx_ls, file = .)
 ```
 
 Add deconvolution matrix to Seurat object metadata
 ```{r}
-decon_mtrx_ls <- readRDS(file = sprintf("%s/%s/decon_mtrx_TICA_breast_%s.RDS",
-                       an_breast_10x, robj_dir, spotlight_id))
+decon_mtrx_ls <- "{an_breast_10x}/{robj_dir}/decon_mtrx_breast_cancer_10x_atlas_{sample_id}_{spotlight_id}_{clust_vr}.rds" %>%
+  glue::glue() %>%
+  here::here() %>%
+  readRDS(file = .)
 
-# decon_mtrx_ls <- readRDS(file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s.RDS",
+# decon_mtrx_ls <- readRDS(file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s.rds",
 #                                         an_breast_10x, robj_dir, spotlight_id))
-# decon_mtrx_ls <- readRDS(file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_pdac_atlas.RDS", an_breast_10x, robj_dir))
-# decon_mtrx_ls <- readRDS(file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s_reg.RDS",
+# decon_mtrx_ls <- readRDS(file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_pdac_atlas.rds", an_breast_10x, robj_dir))
+# decon_mtrx_ls <- readRDS(file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s_reg.rds",
 #                        an_breast_10x, robj_dir, spotlight_id))
 # 
-# decon_mtrx_ls <- readRDS(file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s_latent.RDS",
+# decon_mtrx_ls <- readRDS(file = sprintf("%s/%s/decon_mtrx_breast_cancer_10x_atlas_%s_latent.rds",
 #                        an_breast_10x, robj_dir, spotlight_id))
 
 decon_mtrx <- decon_mtrx_ls[[2]]
 decon_mtrx <- decon_mtrx[, colnames(decon_mtrx) != "res_ss"]
 
-# Set as 0 cell types predicted to be under 0.1 % of the spot
-decon_mtrx[decon_mtrx < 0.001] <- 0
+# Set as 0 cell types predicted to be under 3 % of the spot
+decon_mtrx[decon_mtrx < 0.03] <- 0
 ```
 
 Change names to original ones and reorder according to Paula
@@ -310,14 +292,11 @@ new_colnames <- data.frame(ct_name = colnames(decon_mtrx), stringsAsFactors = FA
   dplyr::pull(plt_name)
 
 colnames(decon_mtrx) <- new_colnames
-
-paula_order[! paula_order %in% colnames(decon_mtrx)]
-decon_mtrx <- decon_mtrx[, paula_order]
 ```
 
 Add deconvolution matrix to Seurat object metadata
 ```{r}
-breast_merged@meta.data <- cbind(breast_merged@meta.data, decon_mtrx)
+se_obj@meta.data <- cbind(se_obj@meta.data, round(decon_mtrx, 3))
 ```
 
 ### Visualization
@@ -329,312 +308,295 @@ h <- NMF::coef(decon_mtrx_ls[[1]][[1]])
 # Extract coefficient labels
 train_labs <- data.frame(ct_name = decon_mtrx_ls[[1]][[2]]) %>%
   dplyr::left_join(col_df, by = "ct_name") %>%
-  pull(plt_name)
+  dplyr::pull(plt_name)
 
-rownames(h) <- paste("Topic", 1:nrow(h), sep = " ")
-profile_plt <- dot_plot_profiles_fun(h = h,
-                                 train_cell_clust = train_labs,
-                                 clust_vr = "specific_cell_type_mod")
-profile_plt[[2]]
+# rownames(h) <- paste("Topic", 1:nrow(h), sep = " ")
+profile_plt <- SPOTlight::dot_plot_profiles_fun(
+  h = h,
+  train_cell_clust = train_labs)
+
+plt_2 <- profile_plt[[2]] +
+  ggplot2::scale_x_discrete(limits = unique(train_labs)) +
+  ggplot2::scale_y_discrete(labels = glue::glue("Topic {1:nrow(h)}")) +
+  ggplot2::labs(x = "", y = "") +
+  ggplot2::theme(
+    axis.title = ggplot2::element_text(size = 15),
+    axis.text.x = ggplot2::element_text(hjust = 1)
+    )
 profile_plt[[1]]
 
-cowplot::save_plot(filename = sprintf("%s/%s/all_ct_profiles_%s.svg",
-                                      an_breast_10x, plt_dir, spotlight_id),
-                   plot = profile_plt[[1]],
-                   base_height = 30,
-                   base_width = 30)
+"{an_breast_10x}/{plt_dir}/all_ct_profiles_{spotlight_id}_{sample_id}_{clust_vr}.pdf" %>%
+  glue::glue() %>%
+  here::here() %>%
+  cowplot::save_plot(
+    filename = .,
+    plot = profile_plt[[1]],
+    base_height = 30,
+    base_width = 30)
 
-cowplot::save_plot(filename = sprintf("%s/%s/ct_profiles_%s.svg",
-                                      an_breast_10x, plt_dir, spotlight_id),
-                   plot = profile_plt[[2]] + 
-                     theme(axis.title = element_text(size = 18)),
-                   base_height = 15,
-                   base_width = 15)
+"{an_breast_10x}/{plt_dir}/ct_profiles_{spotlight_id}_{sample_id}_{clust_vr}.pdf" %>%
+  glue::glue() %>%
+  here::here() %>%
+  cowplot::save_plot(
+    filename = .,
+    plot = plt_2 +
+      ggplot2::theme(axis.title = ggplot2::element_text(size = 18)),
+    base_height = 15,
+    base_width = 15)
+```
+
+Lastly we can take a look at which genes are the most important for each topic and get an insight into which genes are driving them.
+```{r}
+basis_spotlight <- data.frame(NMF::basis(decon_mtrx_ls[[1]][[1]]))
+
+# colnames(basis_spotlight) <- unique(stringr::str_wrap(decon_mtrx_ls[[1]][[2]], width = 30))
+colnames(basis_spotlight) <- glue::glue("Topic-{1:length(unique(decon_mtrx_ls[[1]][[2]]))}")
+
+basis_spotlight %>%
+  round(., 5) %>% 
+  DT::datatable(., filter = "top")
 ```
 
 We will start by looking at the location of each cell type
 ```{r}
-cell_types <- colnames(decon_mtrx)[! colnames(decon_mtrx) %in% "res_ss"]
+# https://stackoverflow.com/questions/38722202/how-do-i-change-the-number-of-decimal-places-on-axis-labels-in-ggplot2
+# Our transformation function to ensure 2 decimals in the legend
+scaleFUN <- function(x) sprintf("%.2f", x)
 
-lapply(seq_len(length(unique(breast_merged$slice))), function(i) {
-  slice_n <- unique(breast_merged$slice)[[i]]
-  st_se <- breast_merged[, breast_merged$slice == slice_n]
+ct_all <- colnames(decon_mtrx)
+ct_plt_ls <- lapply(ct_all, function(ct) {
+  tmp_plt <- Seurat::SpatialPlot(
+    object = se_obj,
+    features = ct,
+    alpha = c(0, 1),
+    # Remove background image
+    image.alpha = 0)
   
-  ct_plt_ls <- lapply(cell_types, function(ct) {
-    tmp_plt <-Seurat::SpatialFeaturePlot(object = st_se,
-                               features = ct,
-                               alpha = c(0, 1))
-    
-    if (sum(st_se@meta.data[, ct]) == 0) {
-      tmp_plt <- tmp_plt[[i]] + scale_alpha(range = c(0,0))
-    } else {
-      tmp_plt <- tmp_plt[[i]] + scale_alpha(range = c(0, 1))
-    }
-    
-    tmp_plt <- tmp_plt +
-      theme(
-        legend.title = element_blank()
-        ) +
-      labs(title = ct) +
-      scale_fill_gradientn(
-        colors = heat.colors(10, rev = TRUE),
-        limits = c(0, 1))
-      
-    # def_plt <- join_seurat_spatial(se_obj = breast_merged,
-    #                                grp = "slice",
-    #                                plt = tmp_plt,
-    #                                feat = ct)
+  if (sum(se_obj@meta.data[, ct]) == 0) {
+    tmp_plt <- tmp_plt + ggplot2::scale_alpha(range = c(0,0))
+  } else {
+    tmp_plt <- tmp_plt + ggplot2::scale_alpha(range = c(0, 1))
+  }
   
-  return(tmp_plt)
-  })
-
-  cowplot::plot_grid(plotlist = ct_plt_ls,
-                     axis = "trbl",
-                     align = "hv",
-                     nrow = 5,
-                     ncol = 5) %>%
-    cowplot::save_plot(filename = sprintf("~/Desktop/breast_10x_immune_reference_arrangement_breast-%s.svg",
-                                          i),
-                       plot = .,
-                       base_height = 25,
-                       base_width = 25)
-      # cowplot::save_plot(filename = sprintf("%s/%s/breast_10x_immune_reference_arrangement_breast-%s.svg",
-      #                                     an_breast_10x, plt_dir, i),
-      #                  plot = .,
-      #                  base_height = 25,
-      #                  base_width = 25)
-
+  tmp_plt <- tmp_plt +
+    ggplot2::theme(
+      legend.title = ggplot2::element_blank()
+      ) +
+    ggplot2::labs(title = ct) +
+    ggplot2::scale_fill_gradientn(
+      colors = grDevices::heat.colors(10, rev = TRUE),
+      # Same number of breaks for all plots
+      breaks = seq(min(se_obj@meta.data[, ct]),
+                   max(se_obj@meta.data[, ct]),
+                   length.out = 4),
+      # 2 decimals in the legend
+      labels = scaleFUN
+      # limits = c(0, 1)
+      )
+return(tmp_plt)
 })
+
+ct_grid <- cowplot::plot_grid(
+  plotlist = ct_plt_ls,
+  axis = "trbl",
+  align = "hv",
+  nrow = 5,
+  ncol = 5)
+
+"{an_breast_10x}/{plt_dir}/{sample_id}_10x_immune_reference_arrangement_{clust_vr}.pdf" %>%
+  glue::glue() %>%
+  here::here() %>%
+  cowplot::save_plot(
+    filename = .,
+    plot = ct_grid,
+    base_height = 25,
+    base_width = 25)
 ```
 
 Next we will only plot the location of the cell types of interest for the main plot
-```{r}
-# i <- unique(breast_merged$slice)[1]
+```{r eval = FALSE}
+# i <- unique(se_obj$slice)[1]
 # ct <- cell_types[[1]]
-lapply(seq_len(length(unique(breast_merged$slice))), function(i) {
-  print(i)
-  slice_n <- unique(breast_merged$slice)[[i]]
-  st_se <- breast_merged[, breast_merged$slice == slice_n]
+ct_plt_ls <- lapply(ct_interest, function(ct) {
+  print(ct)
+  tmp_plt <- Seurat::SpatialPlot(
+    object = se_obj,
+    features = ct,
+    alpha = c(0, 1),
+    # Remove background image
+    image.alpha = 0) +
+    theme(legend.title = ggplot2::element_blank())
   
-  ct_plt_ls <- lapply(ct_interest, function(ct) {
-    print(ct)
-    tmp_plt <-Seurat::SpatialFeaturePlot(object = st_se,
-                               features = ct,
-                               alpha = c(0, 1))
-    
-    if (sum(st_se@meta.data[, ct]) == 0) {
-      tmp_plt <- tmp_plt[[i]] + scale_alpha(range = c(0,0))
-    } else {
-      tmp_plt <- tmp_plt[[i]] +
-        scale_fill_gradientn(
-          colors = heat.colors(10, rev = TRUE),
-          limits = c(0, max(st_se@meta.data[, ct]) + 0.05))
-        # scale_alpha(range = c(0, max(st_se@meta.data[, ct]) + 0.05))
-    }
-    
+  if (sum(se_obj@meta.data[, ct]) == 0) {
+    tmp_plt <- tmp_plt + ggplot2::scale_alpha(range = c(0,0))
+  } else {
     tmp_plt <- tmp_plt +
-      labs(title = ct) +
-      theme(
-        plot.title = element_text(size = 20, face = "bold"),
-        legend.title = element_blank())
-    # def_plt <- join_seurat_spatial(se_obj = breast_merged,
-    #                                grp = "slice",
-    #                                plt = tmp_plt,
-    #                                feat = ct)
+    ggplot2::scale_fill_gradientn(
+      colors = grDevices::heat.colors(10, rev = TRUE),
+      # Same number of breaks for all plots
+      breaks = seq(min(se_obj@meta.data[, ct]),
+                   max(se_obj@meta.data[, ct]),
+                   length.out = 4),
+      # 2 decimals in the legend
+      labels = scaleFUN
+      # limits = c(0, 1)
+      )
+  }
   
-  return(tmp_plt)
-  })
+  tmp_plt <- tmp_plt +
+    ggplot2::labs(title = ct) +
+    ggplot2::theme(
+      plot.title = ggplot2::element_text(hjust = 0.5, size = 20, face = "bold"),
+      legend.title = ggplot2::element_blank())
 
-  cowplot::plot_grid(plotlist = ct_plt_ls,
-                     axis = "trbl",
-                     align = "hv",
-                     nrow = 3,
-                     ncol = 3) %>%
-    cowplot::save_plot(filename = sprintf("%s/%s/breast_10x_immune_reference_arrangement_breast-%s_interest.svg",
-                                          an_breast_10x, plt_dir, i),
-                       plot = .,
-                       base_height = 18,
-                       base_width = 15)
+return(tmp_plt)
 })
+
+interest_grid <- cowplot::plot_grid(plotlist = ct_plt_ls,
+                   axis = "trbl",
+                   align = "hv",
+                   nrow = 3,
+                   ncol = 3)
+
+"{an_breast_10x}/{plt_dir}/{sample_id}_10x_immune_reference_arrangement_interest_{clust_vr}.pdf" %>%
+  glue::glue() %>%
+  here::here() %>%
+  cowplot::save_plot(
+    filename = .,
+    plot = interest_grid,
+    base_height = 18,
+    base_width = 15)
 ```
 
 Then we will plot the spatial-scatterpie for both slices to get a gist of what is going on
-```{r}
-spsct_plt1 <- SPOTlight::spatial_scatterpie(se_obj = breast_merged[, breast_merged$slice == "breast_1"],
-                              cell_types_all = cell_types,
-                              img_path = "data/breast_visium/section_1/spatial/tissue_lowres_image.png",
-                              pie_scale = 0.4,
-                              slice = "breast_1") +
-              scale_fill_manual(values = col_df[col_df$plt_name %in% cell_types, "ct_col"],
-                                breaks = cell_types) +
-              guides(fill=guide_legend(ncol = 1))
+```{r eval = FALSE}
+spsct_plt1 <- SPOTlight::spatial_scatterpie(
+  se_obj = se_obj,
+  cell_types_all = cell_types,
+  img_path = here::here("data/breast_visium/section_1/spatial/tissue_lowres_image.pdf"),
+  pie_scale = 0.4,
+  slice = sample_id)
 
-cowplot::save_plot(filename = sprintf("%s/%s/breast1_10x_spatial_scatterpie.pdf", an_breast_10x, plt_dir),
-                   plot = spsct_plt1,
-                   base_width = 12,
-                   base_height = 9)
+if (clust_vr == "lv1_annot") {
+  spsct_plt1 <- spsct_plt1 +
+    ggplot2::scale_fill_manual(
+    values = col_df[col_df$plt_name %in% cell_types, "ct_col"],
+    breaks = cell_types) +
+    ggplot2::guides(fill = ggplot2::guide_legend(ncol = 1))
+}
 
-spsct_plt2 <- SPOTlight::spatial_scatterpie(se_obj = breast_merged[, breast_merged$slice == "breast_2"],
-                              cell_types_all = cell_types,
-                              img_path = "data/breast_visium/section_1/spatial/tissue_lowres_image.png",
-                              pie_scale = 0.4,
-                              slice = "breast_2") +
-              scale_fill_manual(values = col_df[col_df$plt_name %in% cell_types, "ct_col"],
-                                breaks = cell_types)+
-              guides(fill=guide_legend(ncol = 1))
-
-cowplot::save_plot(filename = sprintf("%s/%s/breast2_10x_spatial_scatterpie.pdf", an_breast_10x, plt_dir),
-                   plot = spsct_plt2,
-                   base_width = 12,
-                   base_height = 9)
+"{an_breast_10x}/{plt_dir}/{sample_id}_10x_spatial_scatterpie_{clust_vr}.pdf" %>%
+  glue::glue() %>%
+  here::here() %>%
+  cowplot::save_plot(
+    filename = .,
+    plot = spsct_plt1,
+    base_width = 12,
+    base_height = 9)
 ```
 
 We will also plot the scatterpie without the slice image underneath
 ```{r}
-img_dict <- list()
-img_dict[["breast_1"]] <- "breast_1"
-img_dict[["breast_2"]] <- "breast_2"
-lapply(unique(breast_merged$slice), function(i) {
-  sct_plt1 <- SPOTlight::scatterpie_plot(se_obj = breast_merged[, breast_merged$slice == i],
-                                         cell_types_all = paula_order,
-                                         pie_scale = 0.7,
-                                         slice = img_dict[[i]]) +
-            scale_fill_manual(values = col_df[col_df$plt_name %in% paula_order, "ct_col"],
-                              breaks = paula_order) +
-            coord_fixed(ratio = 1) +
-            guides(fill = guide_legend(ncol = 1))
+sct_plt1 <- SPOTlight::scatterpie_plot(se_obj = se_obj,
+                                       cell_types_all = ct_all,
+                                       pie_scale = 0.7,
+                                       slice = sample_id) +
+  ggplot2::scale_fill_manual(
+    values = col_df[col_df$plt_name %in% ct_all, "col_df"],
+    breaks = colnames(decon_mtrx)) +
+  ggplot2::coord_fixed(ratio = 1) +
+  ggplot2::guides(fill = ggplot2::guide_legend(ncol = 1))
 
-  cowplot::save_plot(filename = sprintf("%s/%s/breast_%s_10x_scatterpie.svg",
-                                        an_breast_10x, plt_dir, i),
-                     plot = sct_plt1,
-                     base_width = 12,
-                     base_height = 9)
-})
+"{an_breast_10x}/{plt_dir}/{sample_id}_10x_scatterpie_{clust_vr}.pdf" %>%
+  glue::glue() %>%
+  here::here() %>%
+  cowplot::save_plot(
+    filename = .,
+    plot = sct_plt1,
+    base_width = 12,
+    base_height = 9)
 ```
 
 We can also take a loot at the spatial scatterpie by looking at cell types which are not present throughout the entire tissue.
 ```{r}
-lapply(unique(breast_merged$slice), function(i) {
-  # Subset slice
-  st_se <- breast_merged[, breast_merged$slice == i]
-  
-  # Subset cell types from metadata
-  metadata_subset <- st_se@meta.data[, paula_order]
-  
-  # Create masks
-  keep_0.9 <- colSums(st_se@meta.data[, paula_order] > 0) < 0.9 * ncol(st_se)
-  keep_g0 <- colSums(st_se@meta.data[, paula_order] > 0) > 0
-  
-  # Select cell types fullfiling the conditions
-  ct_var <- colnames(decon_mtrx)[keep_0.9 & keep_g0]
+# Subset cell types from metadata
+metadata_subset <- se_obj@meta.data[, ct_all]
 
-  sct_plt <- SPOTlight::scatterpie_plot(se_obj = st_se,
-                                         cell_types_all = ct_var,
-                                         pie_scale = 0.4,
-                                         slice = img_dict[[i]]) +
-            scale_fill_manual(values = col_df[col_df$plt_name %in% ct_var, "ct_col"],
-                              breaks = ct_var) +
-            labs(fill = "") +
-            coord_fixed(ratio = 1) +
-            theme(legend.position = "top") +
-            guides(fill = guide_legend(nrow = 3))
+# Create masks
+keep_0.9 <- colSums(se_obj@meta.data[, ct_all] > 0) < 0.75 * ncol(se_obj)
+keep_g0 <- colSums(se_obj@meta.data[, ct_all] > 0) > 0
 
-  cowplot::save_plot(filename = sprintf("%s/%s/breast_10x_scatterpie_variable_subset_%s.svg",
-                                        an_breast_10x, plt_dir, i),
-                     plot = sct_plt,
-                     base_width = 12,
-                     base_height = 9)
-  
-  # cowplot::save_plot(filename = sprintf("~/Downloads/breast_10x_scatterpie_variable_subset_%s.svg",
-  #                                       i),
-  #                    plot = sct_plt,
-  #                    base_width = 12,
-  #                    base_height = 9)
+# Select cell types fullfiling the conditions
+ct_var <- colnames(decon_mtrx)[keep_0.9 & keep_g0]
 
-})
+col_df <- col_df %>% dplyr::arrange(plt_name)
+sct_plt_int <- SPOTlight::scatterpie_plot(se_obj = se_obj,
+                                       cell_types_all = ct_var,
+                                       pie_scale = 0.4) +
+  ggplot2::scale_fill_manual(
+    values = col_df[col_df$plt_name %in% ct_var, "col_vec"],
+    breaks = col_df[col_df$plt_name %in% ct_var, "plt_name"]) +
+  ggplot2::labs(fill = "") +
+  ggplot2::coord_fixed(ratio = 1) +
+  ggplot2::theme(legend.position = "top") +
+  ggplot2::guides(fill = ggplot2::guide_legend(nrow = 3))
 
+"{an_breast_10x}/{plt_dir}/{sample_id}_10x_scatterpie_interest_{clust_vr}.pdf" %>%
+  glue::glue() %>%
+  here::here() %>%
+  cowplot::save_plot(
+    filename = .,
+    plot = sct_plt_int,
+    base_width = 12,
+    base_height = 9)
 ```
 
 ### Gene - Cell correlation
 Check assumptions
-```{r}
-lapply(unique(breast_merged$slice), function(i) {
-  st_se <- breast_merged[, breast_merged$slice == i]
-  
-  lapply(c("Regulatory T cells", "Proliferative T cells"), function(ct) {
-    # Shapiro-Wilk normality test for mpg
-    print(shapiro.test(st_se@meta.data[, ct]))
-    ggpubr::ggqqplot(st_se@meta.data[, ct])
-  
-  })
-  
-  lapply(c("ENTPD1", "NT5E", "TGFB1"), function(gene) {
-    # Shapiro-Wilk normality test for mpg
-    print(shapiro.test(st_se@assays$SCT@data[gene, ]))
-    ggpubr::ggqqplot(st_se@assays$SCT@data[gene, ])
-  
-  })
+```{r eval = FALSE}
+lapply(c("Regulatory T cells", "Cytotoxic CD8 T cells"), function(ct) {
+  # Shapiro-Wilk normality test for mpg
+  print(shapiro.test(se_obj@meta.data[, ct]))
+  ggpubr::ggqqplot(se_obj@meta.data[, ct])
+
+})
+
+lapply(c("ENTPD1", "NT5E", "TGFB1"), function(gene) {
+  # Shapiro-Wilk normality test for mpg
+  print(shapiro.test(se_obj@assays$SCT@data[gene, ]))
+  ggpubr::ggqqplot(se_obj@assays$SCT@data[gene, ])
+
 })
 ```
 
-Next we want to check if the fibrotic marker TGFB1 with Treg and Tprolif 
-```{r}
+Next we want to check if the fibrotic marker TGFB1 with Treg and Cytotoxic CD8 T cells"
+```{r eval = FALSE}
 library(ggpubr)
-tmp_plts <- lapply(unique(breast_merged$slice), function(i) {
-  st_se <- breast_merged[, breast_merged$slice == i]
-  
-  metadata <- dplyr::bind_cols(st_se@meta.data,
-                               data.frame(t(st_se@assays$SCT@data[c("ENTPD1", "NT5E", "TGFB1"), ])))
-  
-  cor_plts <- lapply(c("Regulatory T cells", "Proliferative T cells"), function(ct) {
-    # tmp_ls <- lapply(c("ENTPD1", "NT5E", "TGFB1"), function(gene) {
-    tmp_ls <- lapply(c("TGFB1"), function(gene) {
-      
-      tmp_plt <- ggpubr::ggscatter(data = metadata,
-                        x = gene,
-                        y = ct,
-                        add = "reg.line") +
-         ggpubr::stat_cor(method = "pearson")
-      return(tmp_plt)
-    })
+
+metadata <- dplyr::bind_cols(
+  se_obj@meta.data,
+  data.frame(t(se_obj@assays$SCT@data[c("ENTPD1", "NT5E", "TGFB1"), ])))
+
+cor_plts <- lapply(c("Regulatory T cells", "Cytotoxic CD8 T cells"), function(ct) {
+  tmp_ls <- lapply(c("ENTPD1", "NT5E", "TGFB1"), function(gene) {
     
-    cowplot::plot_grid(plotlist = tmp_ls, ncol = 1)
+    tmp_plt <- ggpubr::ggscatter(data = metadata,
+                      x = gene,
+                      y = ct,
+                      add = "reg.line") +
+       ggpubr::stat_cor(method = "pearson")
+    return(tmp_plt)
+    })
+  cowplot::plot_grid(plotlist = tmp_ls, ncol = 1)
   })
   
-  tmp_arr <- cowplot::plot_grid(plotlist = cor_plts,
-                                nrow = 1,
-                                ncol = 2)
-  
-  # now add the title
-  title <- cowplot::ggdraw() +
-    cowplot::draw_label(
-      i,
-      fontface = 'bold',
-      x = 0,
-      hjust = 0,
-      size = 20
-    ) +
-    ggplot2::theme(
-      # add margin on the left of the drawing canvas,
-      # so title is aligned with left edge of first plot
-      plot.margin = margin(0, 0, 0, 20)
-    )
-  
-  cowplot::plot_grid(
-    title, tmp_arr,
-    ncol = 1,
-    # rel_heights values control vertical title margins
-    rel_heights = c(0.1, 1)
-  )
-}) %>%
-  cowplot::plot_grid(plotlist = tmp_plts,
-                     nrow = 2)
-
-tmp_plts
+tmp_arr <- cowplot::plot_grid(plotlist = cor_plts,
+                              nrow = 1,
+                              ncol = 2)
+tmp_arr
 ```
 
 ## Session Info
 ```{r}
 sessionInfo()
 ```
-
